force-app/main/default/objects/ssot__PersonalizationLog__dlm/fields/ssot__ContextAnchorApiName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContextAnchorApiName__c</fullName>
    <label>Context Anchor API Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContextAnchorApiName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>