force-app/main/default/objects/ssot__PersonalizationLog__dlm/fields/ssot__ContextAnchorRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContextAnchorRecordId__c</fullName>
    <label>Context Anchor Record Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContextAnchorRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>