force-app/main/default/objects/ssot__PersonalizationLog__dlm/fields/ssot__PersnlRequestChannel__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersnlRequestChannel__c</fullName>
    <label>Personalization Request Channel</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersnlRequestChannel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>