force-app/main/default/objects/ssot__PersonalizationLog__dlm/fields/ssot__PersnlRequestChannelContextDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersnlRequestChannelContextDescription__c</fullName>
    <label>Personalization Request Channel Context</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersnlRequestChannelContextDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>