force-app/main/default/objects/ssot__PersonalizationLog__dlm/fields/ssot__rel_1726212147856_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726212147856_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonalizationLog_RootPersonalizati_rel</label>
    <referenceTo>ssot__PersonalizationPoint__dlm</referenceTo>
    <relationshipLabel>PersonalizationLog_RootPersonalizati_rel</relationshipLabel>
    <relationshipName>rel_1726212147856_end</relationshipName>
    <type>Lookup</type>
</CustomField>