force-app/main/default/objects/ssot__PersonalizationLog__dlm/fields/ssot__RootPersonalizationPointId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RootPersonalizationPointId__c</fullName>
    <label>Root Personalization Point</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RootPersonalizationPointId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>